# tiny-cli

./: README.md  cookiecutter.json
{{ cookiecutter.hyphenated_app_name }}/: README.md  pyproject.toml
{{ cookiecutter.hyphenated_app_name }}/{{ cookiecutter.underscored_app_name }}/: cli.py
