[project]
name = "{{ cookiecutter.hyphenated_app_name }}"
version = "0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"

[project.entry-points.console_scripts]
{{ cookiecutter.hyphenated_app_name }} = "{{ cookiecutter.underscored_app_name }}.cli:cli"

[tool.black]
line-length = 139
